event-listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: el-build-docker-image
  labels:
    app: tekton-listener
spec:
  selector:
    eventlistener: github-webhook-listener  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
