istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-virtualservice
spec:
  hosts:
    - "tekton.aidtaas.com"  
  gateways:
    - dev-mobius/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: el-build-docker-image.default.svc.cluster.local
            port:
              number: 8080
